fix "access-anywhere__link-wrap" bug

--- a/css/main.css
+++ b/css/main.css
@@ -309,8 +309,9 @@ body{
   left: -0.5em;
   border-radius: 0.5em;
   transition: 0.2s ease;
-  transition-property: box-shadow opacity;
+  transition-property: box-shadow, opacity;
   opacity: 0.3;
+  pointer-events: none;
 }
 .access-anywhere__link-wrap:focus-within::after{
   opacity: 1;
